--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-dialog-input": "^1.0.8",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0"
   },
