--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "css-in-js-utils": "^3.1.0",
     "expo": "~46.0.16",
     "expo-cli": "^6.0.6",
     "expo-splash-screen": "~0.16.2",
